2007-01-31  Mark Rowe  <mrowe@apple.com>

        Build fix.

        * WebView/WebView.mm:
        (-[WebView initWithFrame:frameName:groupName:]):

2007-01-31  Mark Rowe  <mrowe@apple.com>

        Reviewed by Oliver.

        Enable -Wundef in WebKit, and change misuses of #if to #ifdef or #ifndef as appropriate.

        * Misc/WebKitLogging.h:
        * WebKit.xcodeproj/project.pbxproj:
        * WebView/WebFrame.mm:
        * WebView/WebFrameInternal.h:
        * WebView/WebHTMLView.mm:
        (-[WebHTMLView validateUserInterfaceItem:]):
        (-[WebHTMLView delete:]):
        (-[WebHTMLView showGuessPanel:]):
        (-[WebHTMLView copy:]):
        (-[WebHTMLView cut:]):
        (-[WebHTMLView paste:]):
        * WebView/WebHTMLViewInternal.h:
        * WebView/WebView.mm:
        (-[WebViewPrivate init]):
        (-[WebView validateUserInterfaceItem:]):
        * WebView/WebViewPrivate.h:

2007-01-30  Brady Eidson  <beidson@apple.com>

        Reviewed by Oliver

        This is a corollary to <rdar://problem/4944887> where certain things happened on an alternate thread.
        To help catch such behavior in the future, add ASSERT_MAIN_THREAD() to key WebKit API points

        * History/WebHistoryItem.mm: Added ASSERT_MAIN_THREAD() to suspected API entry points
        (-[WebHistoryItem dealloc]):
        (-[WebHistoryItem finalize]):
        (-[WebHistoryItem copyWithZone:]):
        (-[WebHistoryItem URLString]):
        (-[WebHistoryItem originalURLString]):
        (-[WebHistoryItem title]):
        (-[WebHistoryItem lastVisitedTimeInterval]):
        (-[WebHistoryItem isEqual:]):
        (-[WebHistoryItem description]):
        (-[WebHistoryItem initWithWebCoreHistoryItem:]):
        (-[WebHistoryItem initFromDictionaryRepresentation:]):
        (-[WebHistoryItem scrollPoint]):
        (-[WebHistoryItem dictionaryRepresentation]):
        (-[WebHistoryItem target]):
        (-[WebHistoryItem visitCount]):
        (-[WebHistoryItem children]):